# ride-duration-prediction

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
ride_duration/: config.yml  processing.py  utils.py
ride_duration/config/: __init__.py  core.py
ride_duration/experiment/: linear.py  linear_pudo.py  sklearn_trees.py  utils.py  xgboost_optuna.py
ride_duration/models/: model_pipe.pkl
ride_duration/tests/: conftest.py  test_config.py  test_pipeline.py  test_predict.py  test_processing.py  test_train.py
scripts/: get_taxi_data.sh
