[metadata]
name = ride-duration-prediction
version = 0.0.0
description = "Predicting ride duration of NYC Green taxis based on TLC Trip Record Data."

[options]
packages = find:
python_requires = 3.9
install_requires =
    scikit-learn >= 1.0.0
    pandas >= 1.5.0
    matplotlib
    seaborn
    toolz
