[metadata]
name = ride-duration-prediction
version = 0.0.0
description = "Predicting ride duration of NYC Green taxis based on TLC Trip Record Data."

[options]
packages = find:
include_package_data = True
install_requires =
    scikit-learn >= 1.0.0
    pandas >= 1.5.0
    strictyaml
    matplotlib
    seaborn
    toolz

[options.package_data]
ride_duration = *.yml
