[metadata]
name = ride-duration-prediction
version = 0.0.3
description = "Predicting ride duration of NYC Green taxis based on TLC Trip Record Data."

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas >= 1.5.0
    strictyaml
    matplotlib
    pydantic
    seaborn

[options.package_data]
ride_duration = *.yml, data/*.parquet, models/*.pkl
